# gp-gui

./: .actrc  .devenv-root  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  SECURITY.md  flake.nix
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  lint.yml  release.yml  scorecards.yml  security.yml
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  main.tsx
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: config.rs  gpclient_wrapper.rs  main.rs
nix/: README.md  checks.nix  devenv.nix  devshell.nix  nixos-module.nix  overlay.nix  treefmt.nix
nix/tests/: nixos-module.nix
scripts/: update-deps.sh
src/: config.rs  gpclient.rs  gpclient_temp.rs  main.rs
