[package]
name = "gp-gui"
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
authors = ["Brian McGillion"]
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chacha20poly1305 = "0.10"
base64 = "0.22"
libc = "0.2"
ctrlc = "3.4"
directories = "6.0"

[features]
default = ["tauri/custom-protocol"]
